Bug 335195 - Effects KCM list isn't navigable by keyboard (arrows, tab, etc.)
Summary: Effects KCM list isn't navigable by keyboard (arrows, tab, etc.)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: 5
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-22 14:39 UTC by Eike Hein
Modified: 2014-05-23 09:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-05-22 14:39:58 UTC
Title says it all.

Reproducible: Always
Comment 1 Martin Flöser 2014-05-23 09:14:27 UTC
Git commit 9292b7e475a6506b087d772698c0434fcd91e7ac by Martin Gräßlin.
Committed on 23/05/2014 at 09:08.
Pushed by graesslin into branch 'master'.

[kcmkwin/compositing] Accept focus on the EffectView

This allows keyboard navigation with cursor keys in the list view.

M  +1    -0    kcmkwin/kwincompositing/qml/EffectView.qml

http://commits.kde.org/kwin/9292b7e475a6506b087d772698c0434fcd91e7ac
Comment 2 Martin Flöser 2014-05-23 09:27:24 UTC
Git commit 39d7ac71c201178520b369c5463a1676e8127492 by Martin Gräßlin.
Committed on 23/05/2014 at 09:20.
Pushed by graesslin into branch 'master'.

[kcmkwin/compositing] Accept StrongFocus on the QuickView's WidgetContainer

This ensures that we can tab to the UI written in QtQuick. Unfortunately
it doesn't get initial focus, which seems to be a general problem of
KCMShell (QWidget based KCMs also do not get focus) and it's not possible
to tab out of quick ui again.

M  +1    -0    kcmkwin/kwincompositing/main.cpp

http://commits.kde.org/kwin/39d7ac71c201178520b369c5463a1676e8127492