[kcmkwin/compositing] Accept StrongFocus on the QuickView's WidgetContainer

This ensures that we can tab to the UI written in QtQuick. Unfortunately
it doesn't get initial focus, which seems to be a general problem of
KCMShell (QWidget based KCMs also do not get focus) and it's not possible
to tab out of quick ui again.

BUG: 335195